tests/src/Loader/classloader/generics/Instantiation/Negative/abstract03.fact.cs
using CoreclrTestLib;
using Xunit;

namespace Loader_classloader
{
    public class _generics_Instantiation_Negative_abstract03_abstract03_
    {
        [OuterLoop]
        [Fact]
        public void _generics_Instantiation_Negative_abstract03_abstract03_cmd()
        {
            CoreclrTestWrapperLib.RunTest("Loader\\classloader\\generics\\Instantiation\\Negative\\abstract03\\abstract03.cmd");
        }
    }
}
